[package]
name = "nft"
version = "0.1.0"
description = "Cryptomore program"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }
borsh = "1.5.5"
solana-program = "1.18.26"


[lib]
crate-type = ["cdylib", "lib"]